<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/assetChooser_button_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/default_first_asset_button_text" />

        <Button
            android:id="@+id/assetChooser_button_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/default_second_asset_button_text" />

        <Button
            android:id="@+id/assetChooser_button_exchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/default_exchange_text" />

        <Button
            android:id="@+id/assetChooser_button_updateInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/update_interval" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/assetChooser_button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@android:string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/assetChooser_button_done"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/done"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/cardview_light_background" />
    </LinearLayout>

</RelativeLayout>